--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
   <main>
     <img src='images/pic1.jpg' alt='Steven Ramirez'>
   </main>
-
+    <header>
+      <h2>Hey! I'm Steven Ramirez</h2>
+    </header>
 </html>
