--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     <p>Software Engineer</p>
   </header>
   <main>
-    <img src='images/pic1.jpg' alt='Steven Ramirez'>
+    <img src='images/pic1.jpg' alt='Steven Ramirez' style="
+      width: 300px;
+      length: 300px;
+    ">
   </main>
-    <header>
-      <h2>Hey! I'm Steven Ramirez</h2>
-    </header>
+    <div>
+        <header>
+          <h2>Hey! I'm Steven Ramirez</h2>
+        </header>
+        <p>I'm a software engineer living in NYC.</p>
 </html>
