--- a/index.html
+++ b/index.html
@@ -25,4 +25,35 @@
           <h2>Hey! I'm Steven Ramirez</h2>
         </header>
         <p>I'm a software engineer living in NYC.</p>
+        <!-- professional interests-->
+        <p>My interests include:</p>
+        <ul>Aesthetic and efficient web design</ul>
+        <ul>Writing succinct and orderly code</ul>
+        <ul>Working in sync with other developers</ul>
+    </div>
+<!-- line break -->
+    <hr>
+    <div>
+      <article>
+        <h3>About Steven</h3>
+        <!-- background info and motivations for becoming an SE-->
+          <p>Before I came to Thinkful I was a scientist. 
+          I have a Masters degree in Environmental Science
+          and I worked at research labs at Mount Sinai and NYU. I'm also
+          a licensed real estate agent.</p>
+
+          <p>Although I love science I found that I really enjoy building
+            and creating things myself. I was always intrigued by the dynamism
+            and innovation of the tech world, so software engineering was
+            a natural fit!</p>
+
+          <p>If you looking to hire a new developer or collaborate on a project,
+            please reach out! I'm happy to be on the path to becoming a software 
+            engineer and can't wait to build the new, exciting software of
+            tomorrow!</p>
+      
+       </article>
+    </div>
+<!-- line break-->
+    <hr>
 </html>
