--- a/index.html
+++ b/index.html
@@ -56,4 +56,13 @@
     </div>
 <!-- line break-->
     <hr>
+    <div>
+      <footer>
+        <h3>Contact Steven</h3>
+          <p>Please feel free to contact me:</p>
+          <!-- add links -->
+          <ol><a href="https://www.linkedin.com/in/stevenr-x7/">LinkedIn</a></ol>
+          <ol><a href="https://github.com/StevenRam7">GitHub</a></ol>
+      </footer>
+    </div>
 </html>
