--- a/index.html
+++ b/index.html
@@ -15,54 +15,51 @@
     <p>Software Engineer</p>
   </header>
   <main>
-    <img src='images/pic1.jpg' alt='Steven Ramirez' style="
-      width: 300px;
-      length: 300px;
-    ">
+    <img src='images/pic1.jpg' alt='Steven Ramirez' class="image">
+    <header>
+      <h2>Hey! I'm Steven Ramirez</h2>
+    </header>
+    <p>I'm a software engineer living in NYC.</p>
+    <!-- professional interests-->
+    <p>My interests include:</p>
+    <ul>
+      <li>Aesthetic and efficient web design</li>
+      <li>Writing succinct and orderly code</li>
+      <li>Working in sync with other developers</li>
+    </ul>
+    <!-- line break -->
+    <hr>
+    <article>
+      <h3>About Steven</h3>
+      <!-- background info and motivations for becoming an SE-->
+      <p>Before I came to Thinkful I was a scientist.
+        I have a Masters degree in Environmental Science
+        and I worked at research labs at Mount Sinai and NYU. I'm also
+        a licensed real estate agent.</p>
+
+      <p>Although I love science I found that I really enjoy building
+        and creating things myself. I was always intrigued by the dynamism
+        and innovation of the tech world, so software engineering was
+        a natural fit!</p>
+
+      <p>If you looking to hire a new developer or collaborate on a project,
+        please reach out! I'm happy to be on the path to becoming a software
+        engineer and can't wait to build the new, exciting software of
+        tomorrow!</p>
+
+    </article>
+    <!-- line break-->
+    <hr>
   </main>
-    <div>
-        <header>
-          <h2>Hey! I'm Steven Ramirez</h2>
-        </header>
-        <p>I'm a software engineer living in NYC.</p>
-        <!-- professional interests-->
-        <p>My interests include:</p>
-        <ul>Aesthetic and efficient web design</ul>
-        <ul>Writing succinct and orderly code</ul>
-        <ul>Working in sync with other developers</ul>
-    </div>
-<!-- line break -->
-    <hr>
-    <div>
-      <article>
-        <h3>About Steven</h3>
-        <!-- background info and motivations for becoming an SE-->
-          <p>Before I came to Thinkful I was a scientist. 
-          I have a Masters degree in Environmental Science
-          and I worked at research labs at Mount Sinai and NYU. I'm also
-          a licensed real estate agent.</p>
+  <footer>
+    <h3>Contact Steven</h3>
+    <p>Please feel free to contact me:</p>
+    <!-- add links -->
+    <ol>
+    <li><a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/">LinkedIn</a></li>
+    <li><a target="_blank" href="https://github.com/StevenRam7">GitHub</a></li>
+    </ol>
+  </footer>
+</body>
 
-          <p>Although I love science I found that I really enjoy building
-            and creating things myself. I was always intrigued by the dynamism
-            and innovation of the tech world, so software engineering was
-            a natural fit!</p>
-
-          <p>If you looking to hire a new developer or collaborate on a project,
-            please reach out! I'm happy to be on the path to becoming a software 
-            engineer and can't wait to build the new, exciting software of
-            tomorrow!</p>
-      
-       </article>
-    </div>
-<!-- line break-->
-    <hr>
-    <div>
-      <footer>
-        <h3>Contact Steven</h3>
-          <p>Please feel free to contact me:</p>
-          <!-- add links -->
-          <ol><a href="https://www.linkedin.com/in/stevenr-x7/">LinkedIn</a></ol>
-          <ol><a href="https://github.com/StevenRam7">GitHub</a></ol>
-      </footer>
-    </div>
 </html>
