--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
   <header>
     <!--name and occupation at top of page-->
     <h1>Steven Ramirez</h1>
-    <p>Software Engineer</p>
+    <h2 class="title-line">Software Engineer</h2>
   </header>
   <main>
     <img src='images/pic1.jpg' alt='Steven Ramirez' class="image">
     <header>
       <h2>Hey! I'm Steven Ramirez</h2>
     </header>
-    <p>I'm a software engineer living in NYC.</p>
-    <!-- professional interests-->
-    <p>My interests include:</p>
-    <ul>
-      <li>Aesthetic and efficient web design</li>
-      <li>Writing succinct and orderly code</li>
-      <li>Working in sync with other developers</li>
-    </ul>
+    <div>
+      <p>I'm a software engineer living in NYC.</p>
+      <!-- professional interests-->
+      <p>My interests include:</p>
+      <ul>
+        <li>Aesthetic and efficient web design</li>
+        <li>Writing succinct and orderly code</li>
+        <li>Working in sync with other developers</li>
+      </ul>
+    </div>
     <!-- line break -->
     <hr>
     <article>
@@ -56,8 +58,8 @@
     <p>Please feel free to contact me:</p>
     <!-- add links -->
     <ol>
-    <li><a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/">LinkedIn</a></li>
-    <li><a target="_blank" href="https://github.com/StevenRam7">GitHub</a></li>
+      <li><a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/">LinkedIn</a></li>
+      <li><a target="_blank" href="https://github.com/StevenRam7">GitHub</a></li>
     </ol>
   </footer>
 </body>
