--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <!--name and occupation at top of page-->
-    <h1>Steven Ramirez</h1>
+    <h1>STEVEN RAMIREZ</h1>
     <h2 class="title-line">Software Engineer</h2>
   </header>
   <main>
@@ -29,15 +29,14 @@
         <li>Working in sync with other developers</li>
       </ul>
     </div>
-    <!-- line break -->
+    <!--divider-->
     <hr>
     <article>
       <h3>About Steven</h3>
       <!-- background info and motivations for becoming an SE-->
       <p>Before I came to Thinkful I was a scientist.
         I have a Masters degree in Environmental Science
-        and I worked at research labs at Mount Sinai and NYU. I'm also
-        a licensed real estate agent.</p>
+        and I worked at research labs at Mount Sinai and NYU.</p>
 
       <p>Although I love science I found that I really enjoy building
         and creating things myself. I was always intrigued by the dynamism
@@ -50,7 +49,7 @@
         tomorrow!</p>
 
     </article>
-    <!-- line break-->
+    <!--divider-->
     <hr>
   </main>
   <footer>
