--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       <!-- background info and motivations for becoming an SE-->
       <p>Before I came to Thinkful I was a scientist.
         I have a Masters degree in Environmental Science
-        and I worked at research labs at Mount Sinai and NYU.</p>
+        and I've worked in research labs at Mount Sinai and NYU.</p>
 
       <p>Although I love science I found that I really enjoy building
         and creating things myself. I was always intrigued by the dynamism
         and innovation of the tech world, so software engineering was
-        a natural fit!</p>
+        a natural fit for me!</p>
 
       <p>If you looking to hire a new developer or collaborate on a project,
         please reach out! I'm happy to be on the path to becoming a software
