--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         and innovation of the tech world, so software engineering was
         a natural fit for me!</p>
 
-      <p>If you looking to hire a new developer or collaborate on a project,
+      <p>If you're looking to hire a new developer or collaborate on a project,
         please reach out! I'm happy to be on the path to becoming a software
         engineer and can't wait to build the new, exciting software of
         tomorrow!</p>
