--- a/index.html
+++ b/index.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Portfolio: Steven Ramirez</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<head>
-  <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width'>
-  <title>Portfolio: Steven Ramirez</title>
-  <link href='style.css' rel='stylesheet' type='text/css' />
-</head>
-
-<body>
-  <header>
-    <!--name and occupation at top of page-->
-    <h1>STEVEN RAMIREZ</h1>
-    <h2 class="title-line">Software Engineer</h2>
-  </header>
-  <main>
-    <img src='images/pic1.jpg' alt='Steven Ramirez' class="image">
+  <body>
     <header>
-      <h2>Hey! I'm Steven Ramirez</h2>
+      <!--name and occupation at top of page-->
+      <h1>STEVEN RAMIREZ</h1>
+      <h2 class="title-line">Software Engineer</h2>
     </header>
-    <div>
-      <p>I'm a software engineer living in NYC.</p>
-      <!-- professional interests-->
-      <p>My interests include:</p>
-      <ul>
-        <li>Aesthetic and efficient web design</li>
-        <li>Writing succinct and orderly code</li>
-        <li>Working in sync with other developers</li>
-      </ul>
-    </div>
-    <!--divider-->
-    <hr>
-    <article>
-      <h3>About Steven</h3>
-      <!-- background info and motivations for becoming an SE-->
-      <p>Before I came to Thinkful I was a scientist.
-        I have a Masters degree in Environmental Science
-        and I've worked in research labs at Mount Sinai and NYU.</p>
-
-      <p>Although I love science I found that I really enjoy building
-        and creating things myself. I was always intrigued by the dynamism
-        and innovation of the tech world, so software engineering was
-        a natural fit for me!</p>
-
-      <p>If you looking to hire a new developer or collaborate on a project,
-        please reach out! I'm happy to be on the path to becoming a software
-        engineer and can't wait to build the new, exciting software of
-        tomorrow!</p>
-
-    </article>
-    <!--divider-->
-    <hr>
-  </main>
-  <footer>
-    <h3>Contact Steven</h3>
-    <p>Please feel free to contact me:</p>
-    <!-- add links -->
-    <ol>
-      <li><a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/">LinkedIn</a></li>
-      <li><a target="_blank" href="https://github.com/StevenRam7">GitHub</a></li>
-    </ol>
-  </footer>
-</body>
-
+    <main>
+      <img src="images/pic1.jpg" alt="Steven Ramirez" class="image" />
+      <header>
+        <h2>About Me</h2>
+      </header>
+      <div>
+        I grew up in NYC and before becoming a software engineer I was a
+        scientist. I have a Masters degree in Environmental Science (primarily
+        focused on microbiology) and I've worked in research labs at Mount Sinai
+        and NYU. Although I love science I found that I really enjoy building
+        and creating things myself. I was always intrigued by the dynamism and
+        innovation of the tech world, so ultimately I decided to take an
+        intensive online course at Thinkful and become a software engineer! 
+        
+        If
+        you're looking to hire a new developer or collaborate on a project, please
+        reach out! I'm eager to continue growing my skills and I can't
+        wait to build the new, exciting software of tomorrow!
+      </div>
+      <!--divider-->
+      <hr />
+      <article>
+        <h3>Projects</h3>
+        <ul>
+          <li>
+            <a target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
+              Restaurant Reservation System
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
+              Pomodoro Timer
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
+              Thinkfulbnb
+            </a>
+          </li>
+          </ul>
+        </ul>
+      </article>
+      <!--divider-->
+      <hr />
+    </main>
+    <footer>
+      <h3>Contact Steven</h3>
+      <p>Please feel free to contact me:</p>
+      <!-- add links -->
+      <ol>
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/StevenRam7">GitHub</a>
+        </li>
+      </ol>
+    </footer>
+  </body>
 </html>
