--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         and NYU. Although I love science I found that I really enjoy building
         and creating things myself. I was always intrigued by the dynamism and
         innovation of the tech world, so ultimately I decided to take an
-        intensive online course at Thinkful and become a software engineer! 
+        intensive online course at Thinkful and become a software engineer! </p>
         
+        <p>
         If
         you're looking to hire a new developer or collaborate on a project, please
         reach out! I'm eager to continue growing my skills and I can't
