--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
       <h3>Contact Steven</h3>
       <p>Please feel free to contact me:</p>
       <!-- add links -->
-      <ol>
-        <li>
+      
+        <button>
           <a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/"
             >LinkedIn</a
           >
-        </li>
-        <li>
+        </button>
+        <button>
           <a target="_blank" href="https://github.com/StevenRam7">GitHub</a>
-        </li>
-      </ol>
+        </button>
+      
     </footer>
   </body>
 </html>
