--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Portfolio: Steven Ramirez</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -66,12 +67,12 @@
       <p>Please feel free to contact me:</p>
       <!-- add links -->
       
-        <button>
+        <button type="button" class="btn btn-primary">
           <a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/"
             >LinkedIn</a
           >
         </button>
-        <button>
+        <button type="button" class="btn btn-primary"> 
           <a target="_blank" href="https://github.com/StevenRam7">GitHub</a>
         </button>
       
