--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             </a>
           </li>
           <li>
-            <a target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
+            <link target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
               Pomodoro Timer
-            </a>
+          </link>
           </li>
           <li>
-            <a target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
+            <link target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
               Thinkfulbnb
-            </a>
+          </link>
           </li>
           </ul>
         </ul>
