--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <img src="images/pic1.jpg" alt="Steven Ramirez" class="image" />
       <header>
-        <h2>About Me</h2>
+        <h2 class="about-me">About Me</h2>
       </header>
       <div>
         <p>
@@ -42,17 +42,17 @@
         <h3>Projects</h3>
         <ul>
           <li>
-            <a target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
+            <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
               Restaurant Reservation System
             </a>
           </li>
           <li>
-            <a target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
+            <a class="projects" target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
               Pomodoro Timer
             </a>
           </li>
           <li>
-            <a target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
+            <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
               Thinkfulbnb
             </a>
           </li>
@@ -65,7 +65,7 @@
     <footer>
       <h3>Contact Steven</h3>
       <p>Please feel free to contact me:</p>
-      <!-- add links -->
+      <!-- links -->
       
         
           <a target="_blank" href="https://www.linkedin.com/in/stevenr-x7/" class="btn btn-primary" role="button"
