--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Portfolio: Steven Ramirez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="style.css" rel="stylesheet" type="text/css" /> -->
   </head>
 
   <body>
@@ -36,8 +36,7 @@
         wait to build the new, exciting software of tomorrow!
         </p>
       </div>
-      <!--divider-->
-      <hr />
+      
       <article>
         <h3>Projects</h3>
         <ul>
@@ -59,8 +58,7 @@
           </ul>
         </ul>
       </article>
-      <!--divider-->
-      <hr />
+      
     </main>
     <footer>
       <h3>Contact Steven</h3>
