--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       
     </main>
     <footer>
-      <h3>Contact Steven</h3>
+      <h3>Contact Information</h3>
       <p>Please feel free to contact me:</p>
       <!-- links -->
-          <button type="button"><a class="buttons" target="_blank" href="https://www.linkedin.com/in/stevenr-x7/" >
-            LinkedIn</a></button>
+          <a class="buttons" target="_blank" href="https://www.linkedin.com/in/stevenr-x7/" >
+            LinkedIn</a>
        
-          <button type="button"><a class="buttons" target="_blank" href="https://github.com/StevenRam7" >
-            GitHub</a></button>
+          <a class="buttons" target="_blank" href="https://github.com/StevenRam7" >
+            GitHub</a>
      </footer>
   </body>
 </html>
