--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
           <a class="buttons" target="_blank" href="https://www.linkedin.com/in/stevenr-x7/" >
             LinkedIn</a>
        
-          <a class="buttons" target="_blank" href="https://github.com/StevenRam7" >
-            GitHub</a>
+          <!-- <a class="buttons" target="_blank" href="https://github.com/StevenRam7" >
+            GitHub</a> -->
+            <button onclick="location.href='https://github.com/StevenRam7'" type="button">
+              GitHub</button>
      </footer>
   </body>
 </html>
