--- a/index.html
+++ b/index.html
@@ -63,12 +63,10 @@
       <h3>Contact Information</h3>
       <p>Please feel free to contact me:</p>
       <!-- links -->
-          <a class="buttons" target="_blank" href="https://www.linkedin.com/in/stevenr-x7/" >
-            LinkedIn</a>
+      <button onclick="location.href='https://www.linkedin.com/in/stevenr-x7/'" target="_blank" type="button">
+        LinkedIn</button>
        
-          <!-- <a class="buttons" target="_blank" href="https://github.com/StevenRam7" >
-            GitHub</a> -->
-            <button onclick="location.href='https://github.com/StevenRam7'" type="button">
+          <button onclick="location.href='https://github.com/StevenRam7'" target="_blank" type="button">
               GitHub</button>
      </footer>
   </body>
