--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       <h3>Contact Information</h3>
       <p>Please feel free to contact me:</p>
       <!-- links -->
-      <button onclick="location.href='https://www.linkedin.com/in/stevenr-x7/'" target="_blank" type="button">
+      <button onclick="location.href='https://www.linkedin.com/in/stevenr-x7/'" class="button" type="button">
         LinkedIn</button>
        
-      <button onclick="location.href='https://github.com/StevenRam7'" target="_blank" type="button">
+      <button onclick="location.href='https://github.com/StevenRam7'" class="button" type="button">
               GitHub</button>
      </footer>
   </body>
