--- a/index.html
+++ b/index.html
@@ -41,18 +41,25 @@
         <ul>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
-              Restaurant Reservation System
+              Restaurant Reservation System:
             </a>
+            <p>Created an application for restaurant workers to input and manage customer reservations</p>
           </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
-              Pomodoro Timer
+              Pomodoro Timer:
             </a>
+            <p>
+              Created an application that allows users to create set intervals for work and break time
+            </p>
           </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
-              Thinkfulbnb
+              Thinkfulbnb:
             </a>
+            <p>
+              Created a responsive webpage that allows users to find vacation rentals
+            </p>
           </li>
           </ul>
         </ul>
