--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <ul>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
-              Restaurant Reservation System:
+              Restaurant Reservation System:<p>Created an application for restaurant workers to input and manage customer reservations</p>
             </a>
-            <p>Created an application for restaurant workers to input and manage customer reservations</p>
+            
           </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
