--- a/index.html
+++ b/index.html
@@ -41,25 +41,22 @@
         <ul>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
-              Restaurant Reservation System:<p>Created an application for restaurant workers to input and manage customer reservations</p>
+              Restaurant Reservation System:
             </a>
-            
+                Created an application for restaurant workers to input and manage customer reservations
           </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
               Pomodoro Timer:
             </a>
-              Created an application that allows users to create set intervals for work and break time
-            
-          </li>
+                Created an application that allows users to create set intervals for work and break time
+            </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
               Thinkfulbnb:
             </a>
-            <p>
-              Created a responsive webpage that allows users to find vacation rentals
-            </p>
-          </li>
+                Created a responsive webpage that allows users to find vacation rentals
+            </li>
           </ul>
         </ul>
       </article>
