--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-restaurant-reservation">
               Restaurant Reservation System:
             </a>
-            &ensp;  Created an application for restaurant workers to input and manage customer reservations
+            &nbsp;  Created an application for restaurant workers to input and manage customer reservations
           </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/pomodoro-timer">
               Pomodoro Timer:
             </a>
-            &ensp;  Created an application that allows users to create set intervals for work and break time
+            &nbsp;  Created an application that allows users to create set intervals for work and break time
             </li>
           <li>
             <a class="projects" target="_blank" href="https://github.com/StevenRam7/starter-thinkfulbnb">
               Thinkfulbnb:
             </a>
-            &ensp;  Created a responsive webpage that allows users to find vacation rentals
+            &nbsp;  Created a responsive webpage that allows users to find vacation rentals
             </li>
           </ul>
         </ul>
